not jarring the IssuesBrowser
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1200 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -74,7 +74,8 @@
 			<fileset dir="classes"/>
 			<fileset dir=".">
 				<include name="resources/**"/>
-			</fileset>
+                <exclude name="com/publicobject/**"/> <!-- IssuesBrowser -->
+            </fileset>
 			<manifest>
 				<attribute name="Main-Class" value="ca.odell.glazedlists.impl.Main"/>
 				<attribute name="Sealed" value="true"/>
