not jarring the IssuesBrowser
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1201 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -71,10 +71,11 @@
 	<target name="jar" depends="compileall"
 		description="Creates glazedlists jar file containing all UI libraries.">
 		<jar destfile="glazedlists_${java.target.version.fileFriendlyName}.jar" update="true" index="true">
-			<fileset dir="classes"/>
-			<fileset dir=".">
-				<include name="resources/**"/>
+			<fileset dir="classes">
                 <exclude name="com/publicobject/**"/> <!-- IssuesBrowser -->
+            </fileset>
+            <fileset dir=".">
+				<include name="resources/**"/>
             </fileset>
 			<manifest>
 				<attribute name="Main-Class" value="ca.odell.glazedlists.impl.Main"/>
