--- a/build.xml
+++ b/build.xml
@@ -176,7 +176,7 @@
     </target>
 
     <target name="jgoodiesforms" depends="core,swing">
-        <mkdir dir="extensions/forms/lib"/>
+        <mkdir dir="extensions/jgoodiesforms/lib"/>
         <java classname="ca.odell.glazedlists.impl.HttpClient">
             <classpath path="classes"/>
             <arg value="https://glazedlists.dev.java.net/files/documents/1073/27334/forms.jar"/>
