Now JGoodies stuff works
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1221 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -208,11 +208,12 @@
         </javac>
     </target>
 
-    <target name="issuesbrowser" depends="core,swing,swt,jfreechart">
+    <target name="issuesbrowser" depends="core,swing,swt,jfreechart,jgoodiesforms">
         <javac destdir="classes" srcdir="extensions/issuesbrowser/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="on">
             <classpath>
                 <fileset dir="extensions/swt/lib/" includes="*.jar"/>
                 <fileset dir="extensions/jfreechart/lib/" includes="*.jar"/>
+                <fileset dir="extensions/jgoodiesforms/lib/" includes="*.jar"/>
             </classpath>
         </javac>
     </target>
