Introducing a new chart: "Open Issues Over Time"
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1224 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -232,6 +232,7 @@
         <!-- unjar the jfreechart classes into the demojar folder -->
         <unjar src="extensions/jfreechart/lib/jcommon.jar" dest="demojar"/>
         <unjar src="extensions/jfreechart/lib/jfreechart.jar" dest="demojar"/>
+        <unjar src="extensions/jgoodiesforms/lib/forms.jar" dest="demojar"/>
 
         <!-- create a *minimal* set of classes required to execute the swing demo -->
         <classfileset id="demoClasses" dir="demojar" rootclass="com.publicobject.issuesbrowser.swing.IssuesBrowser"/>
