fixing java14 build to accomodate for jgoodiesform addition
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1225 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -311,11 +311,19 @@
             <arg value="java14_glazedlists/extensions/jfreechart/source"/>
         </java>
 
+        <!-- Declaw jgoodiesforms/ -->
+        <mkdir dir="java14_glazedlists/extensions/jgoodiesforms/source"/>
+        <java classname="com.publicobject.declawer.Declawer" classpath="tools/declawer.jar">
+            <arg value="extensions/jgoodiesforms/source"/>
+            <arg value="classes${path.separator}extensions/jgoodiesforms/lib/forms.jar"/>
+            <arg value="java14_glazedlists/extensions/jgoodiesforms/source"/>
+        </java>
+
         <!-- Declaw issuesbrowser/ -->
         <mkdir dir="java14_glazedlists/extensions/issuesbrowser/source"/>
         <java classname="com.publicobject.declawer.Declawer" classpath="tools/declawer.jar">
             <arg value="extensions/issuesbrowser/source"/>
-            <arg value="classes${path.separator}extensions/swt/lib/swt-api.jar${path.separator}extensions/jfreechart/lib/jcommon.jar${path.separator}extensions/jfreechart/lib/jfreechart.jar"/>
+            <arg value="classes${path.separator}extensions/swt/lib/swt-api.jar${path.separator}extensions/jfreechart/lib/jcommon.jar${path.separator}extensions/jfreechart/lib/jfreechart.jar${path.separator}extensions/jgoodiesforms/lib/forms.jar"/>
             <arg value="java14_glazedlists/extensions/issuesbrowser/source"/>
         </java>
 
