Now with JAPEX(tm) performance tests!
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1229 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -208,6 +208,25 @@
         </javac>
     </target>
 
+    <target name="japex" depends="compile">
+        <property environment="env"/>
+        <!-- compile the Japex performance tests -->
+        <javac destdir="classes" srcdir="extensions/japex/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="on">
+            <classpath>
+                <fileset dir="${env.JAPEX_HOME}/lib/" includes="*.jar"/>
+            </classpath>
+        </javac>
+        <!-- execute the Japex performance tests -->
+        <property name="config" value="extensions/japex/ListEventAssembler-JapexConfig.xml"/>
+        <java dir="." fork="true" classname="com.sun.japex.Japex">
+            <classpath>
+                <fileset dir="${env.JAPEX_HOME}/lib/" includes="*.jar"/>
+                <fileset dir="${env.JAPEX_HOME}/jdsl/" includes="*.jar"/>
+            </classpath>
+            <arg line="${config}/"/>
+        </java>
+    </target>
+
     <target name="issuesbrowser" depends="core,swing,swt,jfreechart,jgoodiesforms">
         <javac destdir="classes" srcdir="extensions/issuesbrowser/source" debug="on" source="${java.target.version}" target="${java.target.version}" deprecation="on">
             <classpath>
