JEventListPanelTest cannot be converted to java14 without access to forms.jar
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1461 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -350,7 +350,7 @@
         <mkdir dir="java14_glazedlists/test"/>
         <java classname="com.publicobject.declawer.Declawer" classpath="tools/declawer.jar">
             <arg value="test"/>
-            <arg value="classes${path.separator}${ant.home}/lib/junit.jar"/>
+            <arg value="classes${path.separator}${ant.home}/lib/junit.jar${path.separator}extensions/jgoodiesforms/lib/forms.jar"/>
             <arg value="java14_glazedlists/test"/>
         </java>
 
