testing the new publisher....
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1496 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -257,7 +257,8 @@
             </classpath>
         </javac>
         <!-- execute the Japex performance tests -->
-        <property name="config" value="extensions/japex/ListEventAssembler-JapexConfig.xml"/>
+        <!--<property name="config" value="extensions/japex/ListEventAssembler-JapexConfig.xml"/>-->
+        <property name="config" value="extensions/japex/ListEventPublisher-JapexConfig.xml"/>
         <java dir="." fork="true" classname="com.sun.japex.Japex">
             <classpath>
                 <fileset dir="${env.JAPEX_HOME}/lib/" includes="*.jar"/>
