Now with 2 files for generating code...
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1512 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -500,4 +500,21 @@
         </javac>
     </target>
 
+
+    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+       M4
+       Run the m4 preprocessor to generate source code, see
+       http://www.gnu.org/software/m4/
+     - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+    <target name="m4">
+        <exec executable="m4" output="source/ca/odell/glazedlists/impl/adt/barcode2/Node5.java">
+            <arg line="-DVAR_COLOUR_COUNT=5"/>
+            <arg value="source/ca/odell/glazedlists/impl/adt/barcode2/NodeN.jh"/>
+        </exec>
+        <exec executable="m4" output="source/ca/odell/glazedlists/impl/adt/barcode2/Tree5.java">
+            <arg line="-DVAR_COLOUR_COUNT=5"/>
+            <arg value="source/ca/odell/glazedlists/impl/adt/barcode2/TreeN.jh"/>
+        </exec>
+    </target>
+
 </project>
