Now with 2 files for generating code...
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1513 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -504,7 +504,8 @@
     <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
        M4
        Run the m4 preprocessor to generate source code, see
-       http://www.gnu.org/software/m4/
+       Unix: http://www.gnu.org/software/m4/
+       Windows; http://gnuwin32.sourceforge.net/packages/m4.htm
      - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
     <target name="m4">
         <exec executable="m4" output="source/ca/odell/glazedlists/impl/adt/barcode2/Node5.java">
