compileall target did not include ktable (poor poor ktable)
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@1555 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -110,7 +110,7 @@
 		description="Compile the default components of the source.">
 	</target>
 
-	<target name="compileall" depends="core,migrationkit,swing,io,swt,jfreechart,issuesbrowser"
+	<target name="compileall" depends="core,migrationkit,swing,io,swt,ktable,jfreechart,issuesbrowser"
 		description="Compile all components of the source.">
 	</target>
 
